# rust-aws-lambda-example

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  build.sh
src/: main.rs
