[package]
name = "rust-aws-lambda-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_runtime = { version = "0.7.2" }
tokio = "1.23.0"
serde = { version = "1", features = ["derive"] }
serde_derive = "1"
serde_json = "1"

[features]
# default = ["with-lambda"]
with-lambda = []
